<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rokae_xmate3_ros2</name>
  <version>2.1.0</version>
  <description>ROKAE xMate6 public SDK compatibility lane (package name retained as legacy rokae_xmate3_ros2 alias). Install-facing public_sdk artifacts are separated from internal_runtime / internal_devel assets; canonical launch/profile selection and query authority are explicitly gated.</description>
  <maintainer email="support@rokae.com">ROKAE Support</maintainer>
  <license>Apache-2.0</license>

  <author email="support@rokae.com">ROKAE (Beijing) Technology Co., LTD</author>
  <url type="website">https://www.rokae.com</url>
  <url type="bugtracker">https://github.com/rokae</url>

  <!-- Source-tree package dependencies. The public_sdk assembled artifact still exports a slimmer
       xMate6 compatibility lane, but the source package honestly declares the Gazebo / ros2_control /
       launch integration prerequisites that CMake and the canonical launch flows require. -->
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_cpp</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>std_srvs</depend>
  <depend>builtin_interfaces</depend>
  <depend>tf2_ros</depend>
  <depend>kdl_parser</depend>
  <depend>eigen</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>gazebo_ros</depend>
  <depend>controller_manager</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>rosidl_runtime_cpp</depend>
  <depend>unique_identifier_msgs</depend>
  <depend>action_msgs</depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-lxml</exec_depend>

  <!-- The install-facing public_sdk lane still assembles a slimmer consumer artifact; the extra
       runtime-host dependencies above describe only the source-tree package and canonical launch flows. -->
  <!-- 构建工具依赖 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>pkg-config</build_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>rclpy</test_depend>

  <!-- 接口生成必须的组 -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
